# example-project

./: CMLibStorage.cmake  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  Settings.cmake
config/: CMCONF_EXAMPLEConfig.cmake  README.md
